Fixed H Spacing.

--- a/arc_search/static/spec_search/table_styles.css
+++ b/arc_search/static/spec_search/table_styles.css
@@ -1,4 +1,4 @@
-th, td {
+th, td, .sources_p {
     color: #000;
     text-align: center;
     font-family: Avenir;
